fix navbar desktop whitout custom scrollbar and initial particles js in prj

--- a/css/main.css
+++ b/css/main.css
@@ -64,12 +64,10 @@ ul, li {
 
 .navbar-toggler a:hover {
     background-color: var(--clr-three);
-    
     -webkit-border-radius: 9px;
     -moz-border-radius: 9px;
     -ms-border-radius: 9px;
-    -o-border-radius: 9px;
-    
+    -o-border-radius: 9px; 
 }
 
 .name-header-mob-right p {
@@ -83,12 +81,14 @@ ul, li {
     width: 15.6rem;
     height: 100%;
     background-color: var(--clr-two);
-    overflow: visible;
+    overflow-y: auto;
+    z-index: 10000;
+    display: flex;
+    flex-direction: column;
 }
 
 #nav-top-container {
     width: 100%;
-    height: 13rem;
     position: relative;
 }
 
@@ -141,8 +141,6 @@ ul, li {
 
 #nav {
     width: 100%;
-    height: 60%;
-    /* background-color: rgb(93, 19, 19); */
 }
 
 #nav-list {
@@ -150,20 +148,16 @@ ul, li {
     height: 100%; 
     padding-top: 70px;
     padding-bottom: 100px; 
-    display: flex;
-    flex-wrap: wrap;
     padding-right: 0;  
 }
 
 #nav-list li {
     width: 100%;
-    height: 20%;
-
+    min-height: 20%;
     border-bottom: 1px solid rgb(255, 255, 255, 0.1);
-    text-align: -webkit-match-parent;
-    unicode-bidi: isolate;
-    padding-top: 9px;
-    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 25px;
 }
 
 #nav-list li:nth-last-child(1) {
@@ -181,6 +175,7 @@ ul, li {
     -o-transition: var(--transition);
 }
 
+
 #nav-list li a i {
     font-size: 1.2rem;
     vertical-align: middle;
@@ -192,9 +187,16 @@ ul, li {
 }
 
 #social-media-box {
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(58, 48, 48); */
+    width: 15.6rem;
+    /* width: 100%; */
+    height: 2.5rem;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #161515;
+    /* background-color: #100505; */
+    position: fixed;
+    bottom: 0;
+    flex: 1;
 }
 
 #social-media-box a {
@@ -217,3 +219,16 @@ ul, li {
 #social-media-box a:nth-child(4) {
     color: #25D366
 }
+
+canvas {
+    display: block;
+    
+  }
+
+#tsparticles {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--clr-one);
+    opacity: 1;
+    z-index: 10000000;
+  }
